translates Settings -> Game section

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -353,15 +353,15 @@
     <Entry Name="ContinueLastSave">Continue from last save?</Entry>
     <Entry Name="SureQuit">Sure you want to quit?</Entry>
     <Entry Name="Controls">Controls</Entry>
-    <Entry Name="Game">Game</Entry>
+    <Entry Name="Game">Гульня</Entry>
     <Entry Name="Graphics">Graphics</Entry>
-    <Entry Name="Back">Back</Entry>
+    <Entry Name="Back">Назад</Entry>
     <Entry Name="Invert Mouse Y:">Invert Mouse Y:</Entry>
     <Entry Name="Mouse Sensitivity:">Mouse Sensitivity:</Entry>
     <Entry Name="Toggle Crouch:">Toggle Crouch:</Entry>
     <Entry Name="Change Key Mapping">Change Key Mapping</Entry>
-    <Entry Name="On">On</Entry>
-    <Entry Name="Off">Off</Entry>
+    <Entry Name="On">Так</Entry>
+    <Entry Name="Off">Не</Entry>
     <Entry Name="Movement">Movement</Entry>
     <Entry Name="Actions">Actions</Entry>
     <Entry Name="Misc">Misc</Entry>
@@ -384,7 +384,7 @@
     <Entry Name="Flashlight:">Flashlight:</Entry>
     <Entry Name="Glowstick:">Glowstick:</Entry>
     <Entry Name="Sound Volume:">Sound Volume:</Entry>
-    <Entry Name="Language:">Language:</Entry>
+    <Entry Name="Language:">Мова:</Entry>
     <Entry Name="Resolution:">Resolution:</Entry>
     <Entry Name="Noise Filter:">Noise Filter:</Entry>
     <Entry Name="Bloom:">Bloom:</Entry>
@@ -422,11 +422,11 @@
     <Entry Name="Load">Load</Entry>
     <Entry Name="Remove">Remove</Entry>
     <Entry Name="Add To Favorites">Add To Favorites</Entry>
-    <Entry Name="Easy">Easy</Entry>
+    <Entry Name="Easy">Лёгка</Entry>
     <Entry Name="EasyDesc">For players who are bad at action games.</Entry>
-    <Entry Name="Normal">Normal</Entry>
+    <Entry Name="Normal">Звычайна</Entry>
     <Entry Name="NormalDesc">Recommended, suits most players.</Entry>
-    <Entry Name="Hard">Hard</Entry>
+    <Entry Name="Hard">Беларус</Entry>
     <Entry Name="HardDesc">For players wanting a real challenge.</Entry>
     <Entry Name="Resume">Back to game</Entry>
     <Entry Name="Welcome">Welcome to Penumbra: Overture,</Entry>
@@ -435,27 +435,27 @@
     <Entry Name="StartTip2">2. Turn contrast to max.</Entry>
     <Entry Name="StartTip3">3. Adjust brightness so the image below is barely visible.</Entry>
     <Entry Name="StartTip4">4. If image is still to dark / bright please gamma control in options.</Entry>
-    <Entry Name="DisablePersonal:">Add personal notes:</Entry>
+    <Entry Name="DisablePersonal:">Дадаваць нататкі:</Entry>
     <Entry Name="AllowQuickSave:">Allow quick save:</Entry>
     <Entry Name="SimpleSwing:">Simple swing:</Entry>
     <Entry Name="PreMenuText">There are things I need of you. Things you may not understand, and may not wish to do, but please, do not make the same mistakes I did. [br][br]My father, Howard, deserted me before I was born. I could claim the loss of my mother, and the letter I received after her funeral, blinded me to what I had to do. It would be a lie: [br][br]Human nature sealed my downfall.[br][br]My name is Philip. If we are lucky, then by the time you receive this, I will be dead.[br][br]If fate frowns, we all perish.</Entry>
     <Entry Name="CreditsText">*PENUMBRA: OVERTURE[br]*Episode One[br][br][br][br][br][br][br][br][br][br][br]*FRICTIONAL GAMES[br][br][br][br][br]*Lead Programming[br]Thomas Grip[br][br][br]*Additional Programming[br]Luis Rodero Morales[br]Edward Rudd[br][br][br]*Lead Graphics[br]Anton Adamse[br][br][br]*Additional Graphics[br]Emil Meiton[br][br][br]*Sound[br]Jens Nilsson[br][br][br]*Music[br]Mikko Tarmia[br][br][br]*Level Scripting[br]Jens Nilsson[br]Thomas Grip[br][br][br]*Written by[br]TJ Jubert[br][br][br]*Voice Talent[br]Mike Hillard[br][br][br]*Logos[br]Niklas Mattisson[br][br][br]*Special Thanks to[br]Newton Game Dynamics[br]Angel Script[br]Troy A Gusler II[br]Marc Nicander[br]Near and dear for all support[br][br][br]*Beta Testing[br]Henrik Larsson[br]Cedric Guillemet[br]Anton Lenander[br]Petter Flink[br]Tim Soret[br][br][br][br][br][br][br][br][br]For more information on the next episode[br][br]*www.Penumbra-Overture.com</Entry>
-    <Entry Name="Subtitle:">Subtitle:</Entry>
-    <Entry Name="VoiceLanguange:">Voice language:</Entry>
+    <Entry Name="Subtitle:">Субцітры:</Entry>
+    <Entry Name="VoiceLanguange:">Агучка:</Entry>
     <Entry Name="SetThisToLanguageOfVoice">English</Entry>
     <Entry Name="Sound">Sound</Entry>
     <Entry Name="Post Effects:">Post Effects:</Entry>
-    <Entry Name="Difficulty:">Difficulty:</Entry>
+    <Entry Name="Difficulty:">Цяжкасць:</Entry>
     <Entry Name="Shader Quality:">Shader Quality:</Entry>
     <Entry Name="Very Low">Very Low</Entry>
     <Entry Name="TipControlsMouseSensitivity">Sets how sensitive the game will be to mouse movements.</Entry>
     <Entry Name="TipControlsToggleCrouch">If false, crouch needs to be held down, else a press on crouch changes state.</Entry>
     <Entry Name="TipControlsInvertMouseY">Inverts the direction a vertical mouse movement translates to when looking.</Entry>
     <Entry Name="TipSoundVolume">Volume of game sounds and music.</Entry>
-    <Entry Name="TipGameDifficulty">Changes the difficulty, and can be altered when a game is in progress.</Entry>
-    <Entry Name="TipGameDisablePersonal">Turn off to disable access to hints on what to do next.</Entry>
-    <Entry Name="TipGameSubtitles">Make sure the voices are in your language before turning off.</Entry>
-    <Entry Name="TipGameLanguage">Sets the language. Save games in another language will NOT work.</Entry>
+    <Entry Name="TipGameDifficulty">Змяняе цяжкасць. Можна змяняць напрацягу гульні.</Entry>
+    <Entry Name="TipGameDisablePersonal">Адключыце, каб выдаліць падказкі, што рабіць далей.</Entry>
+    <Entry Name="TipGameSubtitles">Пераканайцеся, што агучка на вашай мове перад тым як адключаць.</Entry>
+    <Entry Name="TipGameLanguage">Змяняе мову. Захоўванні на іншых мовах працаваць НЕ БУДУЦЬ.</Entry>
     <Entry Name="TipGraphicsGamma">Brightness of screen. This might make colours dull, so use monitor settings first.</Entry>
     <Entry Name="TipGraphicsNoiseFilter">Noisefilter adds a grain and realism to the ingame graphics.</Entry>
     <Entry Name="TipGraphicsShadows">Turning off shadows can greatly improve framerate. With static, only the most "important" are rendered.</Entry>
@@ -470,14 +470,14 @@
     <Entry Name="TipGraphicsBloom">Makes lighting softer and smoother.</Entry>
     <Entry Name="TipGraphicsMotionBlur">Add realistic motion blur by smoothening fast moving objects. Has large impact on framerate.</Entry>
     <Entry Name="TipGraphicsVSync">Removes image tearing, but lowers framerate.</Entry>
-    <Entry Name="TipGameFlashText">If on, items will flash shortly when nearby. Turn off for a harder game.</Entry>
-    <Entry Name="FlashItems:">Flashing items:</Entry>
+    <Entry Name="TipGameFlashText">Калі ўключана, рэчы будуць падсвечваца, калі ігрок побач з імі. Адключыце для больш цяжкай гульні.</Entry>
+    <Entry Name="FlashItems:">Падсветка рэчаў:</Entry>
     <Entry Name="TipDifficultyEasy">Enemies find it harder to spot you, move slower, and deal less damage.</Entry>
     <Entry Name="TipDifficultyNormal">The most balanced mode to play in.</Entry>
     <Entry Name="TipDifficultyHard">Enemies can take more damage, and are faster.</Entry>
     <Entry Name="Use Hardware:">Use Hardware:</Entry>
     <Entry Name="TipSoundHardware">Switch on if hardware drivers should be used, it's a must for surround. Try turning off if you experience audio glitches. Requires restart.</Entry>
-    <Entry Name="Show Crosshair:">Show Crosshair:</Entry>
+    <Entry Name="Show Crosshair:">Паказваць прыцэл:</Entry>
   </CATEGORY>
   <CATEGORY Name="Global">
     <Entry Name="CombineStringDextrin">It's soaked in Baxtrin, so the gun powder should stick. Or, rather, I really pray the gun powder sticks.</Entry>
