translate Settings -> Controls section

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -352,37 +352,37 @@
     <Entry Name="No">Не</Entry>
     <Entry Name="ContinueLastSave">Continue from last save?</Entry>
     <Entry Name="SureQuit">Точна хочаце выйсці?</Entry>
-    <Entry Name="Controls">Controls</Entry>
+    <Entry Name="Controls">Упраўленне</Entry>
     <Entry Name="Game">Гульня</Entry>
     <Entry Name="Graphics">Graphics</Entry>
     <Entry Name="Back">Назад</Entry>
-    <Entry Name="Invert Mouse Y:">Invert Mouse Y:</Entry>
-    <Entry Name="Mouse Sensitivity:">Mouse Sensitivity:</Entry>
-    <Entry Name="Toggle Crouch:">Toggle Crouch:</Entry>
-    <Entry Name="Change Key Mapping">Change Key Mapping</Entry>
+    <Entry Name="Invert Mouse Y:">Інвертаваць мыш па восі Y:</Entry>
+    <Entry Name="Mouse Sensitivity:">Чуллівасць мышы:</Entry>
+    <Entry Name="Toggle Crouch:">Заўсёды красціся:</Entry>
+    <Entry Name="Change Key Mapping">Змяніць налады клавіш</Entry>
     <Entry Name="On">Так</Entry>
     <Entry Name="Off">Не</Entry>
-    <Entry Name="Movement">Movement</Entry>
-    <Entry Name="Actions">Actions</Entry>
-    <Entry Name="Misc">Misc</Entry>
-    <Entry Name="Reset to defaults">Reset to defaults</Entry>
-    <Entry Name="Forward:">Forward:</Entry>
-    <Entry Name="Backward:">Backward:</Entry>
-    <Entry Name="Strafe Left:">Strafe Left:</Entry>
-    <Entry Name="Strafe Right:">Strafe Right:</Entry>
-    <Entry Name="Run:">Run:</Entry>
-    <Entry Name="Crouch:">Crouch:</Entry>
-    <Entry Name="Jump:">Jump:</Entry>
-    <Entry Name="Lean Left:">Lean Left:</Entry>
-    <Entry Name="Lean Right:">Lean Right:</Entry>
-    <Entry Name="Interact:">Interact:</Entry>
-    <Entry Name="Examine:">Examine:</Entry>
-    <Entry Name="InteractMode:">InteractMode:</Entry>
-    <Entry Name="Inventory:">Inventory:</Entry>
-    <Entry Name="Notebook:">Notebook:</Entry>
-    <Entry Name="Pers. Notes:">Pers. Notes:</Entry>
-    <Entry Name="Flashlight:">Flashlight:</Entry>
-    <Entry Name="Glowstick:">Glowstick:</Entry>
+    <Entry Name="Movement">Рухі</Entry>
+    <Entry Name="Actions">Дзеянні</Entry>
+    <Entry Name="Misc">Іншае</Entry>
+    <Entry Name="Reset to defaults">Скінуць да стандартных</Entry>
+    <Entry Name="Forward:">Уперад:</Entry>
+    <Entry Name="Backward:">Назад:</Entry>
+    <Entry Name="Strafe Left:">Налева:</Entry>
+    <Entry Name="Strafe Right:">Направа:</Entry>
+    <Entry Name="Run:">Бегчы:</Entry>
+    <Entry Name="Crouch:">Красціся:</Entry>
+    <Entry Name="Jump:">Скакаць:</Entry>
+    <Entry Name="Lean Left:">Нахіліцца ўлева:</Entry>
+    <Entry Name="Lean Right:">Нахіліцца ўправа:</Entry>
+    <Entry Name="Interact:">Узаемадзейнічаць:</Entry>
+    <Entry Name="Examine:">Аглянуць рэч:</Entry>
+    <Entry Name="InteractMode:">Інтэрактыўны рэжым:</Entry>
+    <Entry Name="Inventory:">Інвентар:</Entry>
+    <Entry Name="Notebook:">Нататнік:</Entry>
+    <Entry Name="Pers. Notes:">Нататкі:</Entry>
+    <Entry Name="Flashlight:">Ліхтарык:</Entry>
+    <Entry Name="Glowstick:">Люмінесцэнтнае святло:</Entry>
     <Entry Name="Sound Volume:">Sound Volume:</Entry>
     <Entry Name="Language:">Мова:</Entry>
     <Entry Name="Resolution:">Resolution:</Entry>
@@ -407,10 +407,10 @@
     <Entry Name="Bilinear">Bilinear</Entry>
     <Entry Name="Trilinear">Trilinear</Entry>
     <Entry Name="Empty">..empty..</Entry>
-    <Entry Name="Configure Keys">Configure Keys</Entry>
+    <Entry Name="Configure Keys">Наладзіць клавішы</Entry>
     <Entry Name="Depth of Field:">Depth of Field:</Entry>
-    <Entry Name="Holster:">Holster:</Entry>
-    <Entry Name="LookMode:">LookMode:</Entry>
+    <Entry Name="Holster:">Кабура:</Entry>
+    <Entry Name="LookMode:">Рэжым агляду:</Entry>
     <Entry Name="Load Game">Загрузіць</Entry>
     <Entry Name="Continue">Працягнуць</Entry>
     <Entry Name="New Game">Новая гульня</Entry>
@@ -448,9 +448,9 @@
     <Entry Name="Difficulty:">Цяжкасць:</Entry>
     <Entry Name="Shader Quality:">Shader Quality:</Entry>
     <Entry Name="Very Low">Very Low</Entry>
-    <Entry Name="TipControlsMouseSensitivity">Sets how sensitive the game will be to mouse movements.</Entry>
-    <Entry Name="TipControlsToggleCrouch">If false, crouch needs to be held down, else a press on crouch changes state.</Entry>
-    <Entry Name="TipControlsInvertMouseY">Inverts the direction a vertical mouse movement translates to when looking.</Entry>
+    <Entry Name="TipControlsMouseSensitivity">Вызначае, наколькі чуллівая будзе гульня да рухаў мышы.</Entry>
+    <Entry Name="TipControlsToggleCrouch">Адключае неабходнасць трымаць нажатай кнопку каб красціся.</Entry>
+    <Entry Name="TipControlsInvertMouseY">Інвертуе напрамак вертыкальных рухаў мышы пры аглядзе.</Entry>
     <Entry Name="TipSoundVolume">Volume of game sounds and music.</Entry>
     <Entry Name="TipGameDifficulty">Змяняе цяжкасць. Можна змяняць напрацягу гульні.</Entry>
     <Entry Name="TipGameDisablePersonal">Адключыце, каб выдаліць падказкі, што рабіць далей.</Entry>
