translate Settings -> Graphics section

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -354,7 +354,7 @@
     <Entry Name="SureQuit">Точна хочаце выйсці?</Entry>
     <Entry Name="Controls">Упраўленне</Entry>
     <Entry Name="Game">Гульня</Entry>
-    <Entry Name="Graphics">Graphics</Entry>
+    <Entry Name="Graphics">Графіка</Entry>
     <Entry Name="Back">Назад</Entry>
     <Entry Name="Invert Mouse Y:">Інвертаваць мыш па восі Y:</Entry>
     <Entry Name="Mouse Sensitivity:">Чуллівасць мышы:</Entry>
@@ -385,30 +385,30 @@
     <Entry Name="Glowstick:">Люмінесцэнтнае святло:</Entry>
     <Entry Name="Sound Volume:">Гучнасць:</Entry>
     <Entry Name="Language:">Мова:</Entry>
-    <Entry Name="Resolution:">Resolution:</Entry>
-    <Entry Name="Noise Filter:">Noise Filter:</Entry>
+    <Entry Name="Resolution:">Разрознасць:</Entry>
+    <Entry Name="Noise Filter:">Шумавы фільтр:</Entry>
     <Entry Name="Bloom:">Bloom:</Entry>
-    <Entry Name="Gamma:">Gamma:</Entry>
-    <Entry Name="Advanced">Advanced</Entry>
-    <Entry Name="Advanced Graphics">Advanced Graphics</Entry>
-    <Entry Name="Texture Quality:">Texture Quality:</Entry>
-    <Entry Name="Shadows:">Shadows:</Entry>
-    <Entry Name="Motion Blur:">Motion Blur:</Entry>
-    <Entry Name="VSync:">VSync:</Entry>
-    <Entry Name="Texture Filter:">Texture Filter:</Entry>
-    <Entry Name="Anisotropy:">Anisotropy:</Entry>
-    <Entry Name="Anti-Aliasing:">Anti-Aliasing:</Entry>
-    <Entry Name="GraphicsRestart">The game must be restarted for the settings to take effect.</Entry>
+    <Entry Name="Gamma:">Гама:</Entry>
+    <Entry Name="Advanced">Дадаткова</Entry>
+    <Entry Name="Advanced Graphics">Дадатковыя налады графікі</Entry>
+    <Entry Name="Texture Quality:">Якасць тэкстур:</Entry>
+    <Entry Name="Shadows:">Цені:</Entry>
+    <Entry Name="Motion Blur:">Размыццё ў руху:</Entry>
+    <Entry Name="VSync:">В.Сінхранізацыя:</Entry>
+    <Entry Name="Texture Filter:">Фільтрацыя тэкстур:</Entry>
+    <Entry Name="Anisotropy:">Анізатропная фільтрацыя:</Entry>
+    <Entry Name="Anti-Aliasing:">Анты-алайзінг:</Entry>
+    <Entry Name="GraphicsRestart">Гульню трэба перазапусціць, каб налады ўступілі ў дзеянне.</Entry>
     <Entry Name="OK">OK</Entry>
-    <Entry Name="High">High</Entry>
-    <Entry Name="Medium">Medium</Entry>
-    <Entry Name="Low">Low</Entry>
-    <Entry Name="Only Static">Only Static</Entry>
-    <Entry Name="Bilinear">Bilinear</Entry>
-    <Entry Name="Trilinear">Trilinear</Entry>
+    <Entry Name="High">Высокая</Entry>
+    <Entry Name="Medium">Сярэдняя</Entry>
+    <Entry Name="Low">Нізкая</Entry>
+    <Entry Name="Only Static">Толькі статычныя</Entry>
+    <Entry Name="Bilinear">Білінейная</Entry>
+    <Entry Name="Trilinear">Трылінейная</Entry>
     <Entry Name="Empty">..empty..</Entry>
     <Entry Name="Configure Keys">Наладзіць клавішы</Entry>
-    <Entry Name="Depth of Field:">Depth of Field:</Entry>
+    <Entry Name="Depth of Field:">Глыбіня рэзкасці:</Entry>
     <Entry Name="Holster:">Кабура:</Entry>
     <Entry Name="LookMode:">Рэжым агляду:</Entry>
     <Entry Name="Load Game">Загрузіць</Entry>
@@ -446,8 +446,8 @@
     <Entry Name="Sound">Гукі</Entry>
     <Entry Name="Post Effects:">Post Effects:</Entry>
     <Entry Name="Difficulty:">Цяжкасць:</Entry>
-    <Entry Name="Shader Quality:">Shader Quality:</Entry>
-    <Entry Name="Very Low">Very Low</Entry>
+    <Entry Name="Shader Quality:">Якасць шэйдраў:</Entry>
+    <Entry Name="Very Low">Вельмі нізкая</Entry>
     <Entry Name="TipControlsMouseSensitivity">Вызначае, наколькі чуллівая будзе гульня да рухаў мышы.</Entry>
     <Entry Name="TipControlsToggleCrouch">Адключае неабходнасць трымаць нажатай кнопку каб красціся.</Entry>
     <Entry Name="TipControlsInvertMouseY">Інвертуе напрамак вертыкальных рухаў мышы пры аглядзе.</Entry>
@@ -456,20 +456,20 @@
     <Entry Name="TipGameDisablePersonal">Адключыце, каб выдаліць падказкі, што рабіць далей.</Entry>
     <Entry Name="TipGameSubtitles">Пераканайцеся, што агучка на вашай мове перад тым як адключаць.</Entry>
     <Entry Name="TipGameLanguage">Змяняе мову. Захоўванні на іншых мовах працаваць НЕ БУДУЦЬ.</Entry>
-    <Entry Name="TipGraphicsGamma">Brightness of screen. This might make colours dull, so use monitor settings first.</Entry>
-    <Entry Name="TipGraphicsNoiseFilter">Noisefilter adds a grain and realism to the ingame graphics.</Entry>
-    <Entry Name="TipGraphicsShadows">Turning off shadows can greatly improve framerate. With static, only the most "important" are rendered.</Entry>
-    <Entry Name="TipGraphicsTextureFilter">Trilinear gives nicer graphics when zoomed out, while bilinear is faster.</Entry>
-    <Entry Name="TipGraphicsTextureAnisotropy">Make textures far away and with an high angle look nicer. Only noticable at high resolutions. Has a big impact on framerate.</Entry>
-    <Entry Name="TipGraphicsFSAA">Smoothes edges on graphics. Has a big impact on framerate. Requires restart.</Entry>
-    <Entry Name="TipGraphicsDOF">Give the scene a focus depth. It is not used very often, so impact on framerate is not big.</Entry>
-    <Entry Name="TipGraphicsShaderQuality">Quality of rendering. May have impact on rendering, depending on your graphics card. Requires restart if game is already started.</Entry>
-    <Entry Name="TipGraphicsTextureQuality">The resolution of textures in the game. Worth lowering if you have an old graphics card with little RAM (below 128). Requires restart.</Entry>
-    <Entry Name="TipGraphicsResolution">Screen resolution. Requires restart.</Entry>
-    <Entry Name="TipGraphicsPostEffects">Turns all post effects on/off. This includes DOF, Motion blur, Bloom and image trail (used to blur screen).</Entry>
-    <Entry Name="TipGraphicsBloom">Makes lighting softer and smoother.</Entry>
-    <Entry Name="TipGraphicsMotionBlur">Add realistic motion blur by smoothening fast moving objects. Has large impact on framerate.</Entry>
-    <Entry Name="TipGraphicsVSync">Removes image tearing, but lowers framerate.</Entry>
+    <Entry Name="TipGraphicsGamma">Яркасць экрана. Можа зрабіць колеры цьмянымі, таму лепей выкарыстоўвайце налады манітора. Патрабуе перазапуск.</Entry>
+    <Entry Name="TipGraphicsNoiseFilter">Шумавы фільтр дадае зярністаць і рэалізм да гульнявой графікі.</Entry>
+    <Entry Name="TipGraphicsShadows">Адключэнне ценяў можа вельмі палепшыць прадукцыйнасць. Са статычнымі адрысоўваюцца толькі найбольш важныя.</Entry>
+    <Entry Name="TipGraphicsTextureFilter">Трылінейная дае лепшую графіку пры аддаленні, тым часам білінейная хутчэйшая.</Entry>
+    <Entry Name="TipGraphicsTextureAnisotropy">Робіць аддаленыя тэкстуры пад вялікім вуглом прыгажэйшымі. Прыметна толькі з вялікай разрознасцю. Аказвае вялікі ўплыў на прадукцыйнасць.</Entry>
+    <Entry Name="TipGraphicsFSAA">Згладжвае вуглы. Мае вялікі ўплыў на прадукцыйнасць. Патрабуе перазапуск.</Entry>
+    <Entry Name="TipGraphicsDOF">Дадае сцэне глыбіню фокуса. Выкарыстоўваецца не вельмі часта, таму ўплыў на прадукцыйнасць невялікі.</Entry>
+    <Entry Name="TipGraphicsShaderQuality">Якасць адрысоўкі. Можа аказваць уплыў на рэндар у залежнасці ад вашай відэакарты. Патрабуе перазапуск, калі гульня ўжо пачата.</Entry>
+    <Entry Name="TipGraphicsTextureQuality">Разрознасць тэкстур гульні. Лепш знізіць, калі ў вас старая відэакарта з маленькай колькасцю памяці(менш за 128мб). Патрабуе перазапуск.</Entry>
+    <Entry Name="TipGraphicsResolution">Разрознасць экрана. Патрабуе перазапуск.</Entry>
+    <Entry Name="TipGraphicsPostEffects">Адключае/уключае ўсе постэфекты. Сюды ўваходзяць глыбіня рэзкасці, размыццё рухаў, блюм, след выявы(выкарыстоўваецца для размыцця экрана).</Entry>
+    <Entry Name="TipGraphicsBloom">Робіць свячэнне больш мяккім і гладкім.</Entry>
+    <Entry Name="TipGraphicsMotionBlur">Дадае рэалістычнае размыццё, змазваючы аб'екты, якія хутка рухаюцца. Мае вялікі ўплыў на прадукцыйнасць.</Entry>
+    <Entry Name="TipGraphicsVSync">Выдаляе разрыванне карцінкі, але зніжае прадукцыйнасць.</Entry>
     <Entry Name="TipGameFlashText">Калі ўключана, рэчы будуць падсвечваца, калі ігрок побач з імі. Адключыце для больш цяжкай гульні.</Entry>
     <Entry Name="FlashItems:">Падсветка рэчаў:</Entry>
     <Entry Name="TipDifficultyEasy">Enemies find it harder to spot you, move slower, and deal less damage.</Entry>
